@@ -155,10 +155,10 @@
 				  _label="Hide Location _Bar"
 				  _tip="Change the visibility of this window's location bar"
 				  verb="Show Hide Location Bar"/>
-			<menuitem name="Show Hide Status Bar" 
-				  _label="Hide St_atus Bar"
-				  _tip="Change the visibility of this window's status bar"
-				  verb="Show Hide Status Bar"/>
+			<menuitem name="Show Hide Statusbar" 
+				  _label="Hide St_atusbar"
+				  _tip="Change the visibility of this window's statusbar"
+				  verb="Show Hide Statusbar"/>
 		</placeholder>
 		<placeholder name="View Preferences Placeholder" delimit = "top"/>
 		<placeholder name="View Items Placeholder" delimit="top"/>
