@@ -1,3 +1,10 @@
+2002-03-14 John Fleck <jfleck@inkstain.net>
+
+	* src/nautilus-shell-ui.xml
+	* src/nautilus-window-menus.c
+	changing "Status Bar" to "Statusbar", per documentation
+	style guide, fixing bug #66649
+
 2002-03-11  Michael Meeks  <michael@ximian.com>
 
 	* libnautilus-private/nautilus-bonobo-extensions.c
